added home page with excerpts

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 #container {
     font-family:Arial, Helvetica, sans-serif;
-    background-color: bisque;
+    background-color: whitesmoke;
 }
 #imagecontainer {
     position: relative;
