--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,21 @@
+/*full site formating */
 #container {
     font-family:Arial, Helvetica, sans-serif;
     background-color: whitesmoke;
 }
+hr {
+  color: rgb(29, 107, 199);
+}
+section {
+  width: 60%;
+  margin-left: 20%;
+  font-size: 18pt;
+}
+h1 {
+  text-align: center;
+}
+
+/* header */
 #imagecontainer {
     position: relative;
     text-align: center;
@@ -17,45 +31,60 @@
   color:crimson;
 }
 #navbar {
-    
+   display: flex;
+    background-color: bisque;
 
 }
 ul {
-    width: 100%;
+   width: 100%;
     list-style-type: none;
     text-align: center;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    
     display: flex;
     justify-content: center;
-    
-}
-li {
-      
+    overflow: hidden;
     
 }
 li a {
-    display: block;
-    text-align: center;
-    padding: 16px;
+      float: left;
+      display: block;
+  
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
     
 }
+
+
 .navlink {
-    text-decoration: none;
+    
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: normal;
     font-size: 18pt;
     letter-spacing: 0.2em;
+    
 }
-section {
-    width: 60%;
-    margin-left: 20%;
-    font-size: 18pt;
+
+/* footer */
+footer {
+  position: relative;
+  height: 60px;
+  background-color: rgb(29, 107, 199);
+  color: white;
 }
-h1 {
-    text-align: center;
+#copyright {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 12pt;
 }
+
+/* social media links */
 .socialheader {
     display: flex;
     justify-content: center;
@@ -70,20 +99,13 @@ h1 {
     border-radius: 50%;
   }
   
-  /* Add a hover effect if you want */
-  .fa:hover {
+ .fa:hover {
     opacity: 0.7;
   }
-  
-  /* Set a specific color for each brand */
-  
-  /* Facebook */
   .fa-facebook {
     background: #3B5998;
     color: white;
   }
-  
-  /* Twitter */
   .fa-twitter {
     background: #55ACEE;
     color: white;
@@ -96,10 +118,15 @@ h1 {
     background: black;
     color: white;
   }
+  .fa-envelope-o {
+    background: #d63297;
+    color: white;
+  }
   #projectblocks {
     box-sizing: border-box;
   }
   
+  /*projects page */
   /* Create three equal columns that floats next to each other */
   .column {
     float: left;
@@ -110,10 +137,10 @@ h1 {
     color: black;
     
   }
+ 
   .column p {
       font-size: 16px;
   }
-  
   /* Clear floats after the columns */
   .row:after {
     content: "";
@@ -132,4 +159,15 @@ h1 {
   }
   .project-title:hover {
       font-weight: 900;
+  }
+  /* phone formating */
+  @media (max-width: 400px){
+    .column{
+      width: 100%;
+    }
+    .headertext {
+      font-size: medium;
+      top: 50%;
+    }
+    
   }
