--- a/portfolio.css
+++ b/portfolio.css
@@ -2,6 +2,25 @@
 #container {
     font-family:Arial, Helvetica, sans-serif;
     background-color: whitesmoke;
+    
+}
+#630AboutMe {
+  display:flex;
+  align-items: flex-start;
+}
+#amPic {
+  width: 20vw;
+  height: 20vw;
+  margin-right: 20px;
+  background-image: url('images/LesleyNLogan.jpg');
+  background-size: cover; /* This ensures the image covers the entire div */
+    background-position: center; /* This centers the image in the div */
+    float: left;
+}
+#aboutMe {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
 }
 hr {
   color: rgb(29, 107, 199);
