--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@
   width: 20vw;
   height: 20vw;
   margin-right: 20px;
-  background-image: url('images/LesleyNLogan.jpg');
+  background-image: url('images/lesleyHeadshot.jpg');
   background-size: cover; /* This ensures the image covers the entire div */
     background-position: center; /* This centers the image in the div */
     float: left;
@@ -196,3 +196,30 @@ footer {
     }
     
   }
+  /* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  /* border-bottom: 1px dotted black; If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+/*  */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
