--- a/portfolio.css
+++ b/portfolio.css
@@ -14,6 +14,7 @@
   margin-right: 20px;
   background-image: url('images/lesleyHeadshot.jpg');
   background-size: cover; /* This ensures the image covers the entire div */
+  border-radius: 50%;
     background-position: center; /* This centers the image in the div */
     float: left;
 }
