removed nar bar sizing

--- a/portfolio.css
+++ b/portfolio.css
@@ -76,9 +76,9 @@ li a {
   text-decoration: none;
     
 }
-#navbar li {
+/* #navbar li {
   max-width: 100px;
-}
+} */
 .navlink {
     
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
